@@ -150,9 +150,11 @@ func tx_xml(w http.ResponseWriter, v *network.OneTxToSend, verbose bool) {
 	if int(v.Size)!=len(v.Data) {
 		panic("TX size does not match data length")
 	}
+
 	fmt.Fprint(w, "<size>", v.Size, "</size>")
 	fmt.Fprint(w, "<nwsize>", v.NoWitSize, "</nwsize>")
 	fmt.Fprint(w, "<vsize>", v.VSize(), "</vsize>")
+	fmt.Fprint(w, "<sw_compress>", 1000 * (int(v.Size) - int(v.NoWitSize)) / int(v.Size), "</sw_compress>")
 	fmt.Fprint(w, "<inputs>", len(v.TxIn), "</inputs>")
 	fmt.Fprint(w, "<outputs>", len(v.TxOut), "</outputs>")
 	fmt.Fprint(w, "<lock_time>", v.Lock_time, "</lock_time>")
@@ -239,6 +241,10 @@ func (tl sortedTxList) Less(i, j int) bool {
 			res = !tl[j].Final && tl[i].Final
 		case "ver":
 			res = int(tl[j].VerifyTime) < int(tl[i].VerifyTime)
+		case "swc":
+			sw_compr_i := float64(int(tl[i].Size) - int(tl[i].NoWitSize)) / float64(tl[i].Size)
+			sw_compr_j := float64(int(tl[j].Size) - int(tl[j].NoWitSize)) / float64(tl[j].Size)
+			res = sw_compr_i < sw_compr_j
 		default: /*spb*/
 			spb_i := float64(tl[i].Fee)/float64(len(tl[i].Data))
 			spb_j := float64(tl[j].Fee)/float64(len(tl[j].Data))
